--- a/src/app/css/style.css
+++ b/src/app/css/style.css
@@ -1,6 +1,11 @@
+body{
+    background-color: #000;
+}
+
 .search-bar{
   text-align: center;
 }
+
 .search-bar input{
     margin-top: 5px;
     padding: 5px;
@@ -10,16 +15,40 @@
     width: 500px;
     text-align: center;
 }
-h1{
-    text-align: center;
-}
+
 .weather-city-name ul li{
     text-align: center;
+    border: 1px solid #fff;
+    background-color: #000;
+    color: #fff;
 }
 .weather-city-name ul li img{
-     width: 59%;
+    width: 62.40%;
+
 }
+.weather-city-info ul li{
+    border: 1px solid #fff;
+    border-radius: 2px;
+    background-color: #000;
+    color: #fff;
+}
+.weather-map{
+    height: 500px;
+}
+
 span{
     font-weight: bold;
     font-family: Times New Roman;
 }
+
+h1{
+    margin-top: 40px;
+    text-align: center;
+    color: #fff;
+}
+h2{
+    text-align: center;
+    color: #fff;
+    margin-left: 30px;
+}
+
